Enhancement: Format order dates to 'dd-MM-yyyy HH:mm' using static DateTimeFormatter and populate image_url